--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,9 +1,15 @@
 .Weather {
 	font-family: arial,sans-serif;
-	background: rgb(237, 177, 241, 0.2); 
-	border: 1px solid #d59bf6;
-  padding: 16px;
-  border-radius: 4px;
+	background: rgb(245, 199, 247, 0.2);; 
+	border: 1px solid rgba(255, 93, 158, 0.102);
+  border-radius: 14px;
+  padding: 30px;
+  box-shadow: 0px 20px 30px rgba(86, 59, 70, 0.2);
+}
+
+.Weather form {
+  border-bottom: 1px solid rgba(255, 93, 158, 0.102);
+  padding-bottom: 30px;
 }
 
 .Weather li {
@@ -14,10 +20,22 @@
 }
 
 .Weather h1 {
-	color: #202124;
-  font-size: 24px;
+	color: #5e92fc;
+  font-size: 32px;
   line-height: 29px;
-	font-weight: 400;
+	font-weight: 700;
+}
+
+.Weather .search-input {
+  background: rgb(130, 172, 255, 0.1);
+  border: none;
+  padding: 8px;
+  color: rgba(39, 33, 66, 0.4);
+}
+
+.Weather .btn {
+  background: #82ACFF;
+  font-weight: 700;
 }
 
 .Weather .description {
@@ -39,12 +57,12 @@
 
 .Weather .unit {
   color: rgb(33, 33, 33);
-  font-size: 16px;
+  font-size: 18px;
 	line-height: 24px;
   font-weight: 400;
   position: relative;
   line-height: 1;
-  top: -34px;
+  top: -32px;
 }
 
 .Weather .unit a {
@@ -53,4 +71,15 @@
 
 .Weather .citySearch {
 	text-align: right;
+}
+
+.Weather footer {
+  font-size: 12px;
+  text-align: center;
+  color: rgba(39, 33, 66, 0.4);
+}
+
+.Weather footer a {
+  text-decoration: none;
+  color: #82ACFF;
 }
